--- a/microservicos-spring-cloud/eureka-server/src/main/resources/application.yml
+++ b/microservicos-spring-cloud/eureka-server/src/main/resources/application.yml
@@ -1,5 +1,7 @@
+server:
+  port: 8761
 
-server:  port: 8761
-
-eureka:  client:    fetch-registry: false
+eureka:
+  client:
+    fetch-registry: false
     register-with-eureka: false
