--- a/microservicos-spring-cloud/fornecedor/src/main/resources/application.yml
+++ b/microservicos-spring-cloud/fornecedor/src/main/resources/application.yml
@@ -2,6 +2,21 @@
 server:
   port: 8081
 
+spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2
+  datasource:
+    username: sa
+    password:
+    url: jdbc:h2:mem:demo
+    driver-class-name: org.h2.Driver
+  jpa:
+    database-plataform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create
+
 eureka:
   client:
     register-with-eureka: true
